solution/manifests/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app.kubernetes.io/part-of: ckad-namespace-workshop
spec:
  type: ClusterIP
  selector: {app: frontend, tier: web}
  ports: [{name: http, port: 80, targetPort: http}]
